@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract} effect():void;
    + forward():void;
}

AbstractFlyingObject <|-- AbstractProp

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }

class Blood_prop
{
    + {static} HEAL_AMOUNT;
    + Blood_prop(int locationX, int locationY, int speedX, int speedY);
    + effect():void;
    + getImage():BufferedImage;
}

class Fire_prop{
}

class SuperFire_prop{
}

class Bomb_prop{
}

class Ice_prop{
}

AbstractProp <|-- Blood_prop
AbstractProp <|-- Fire_prop
AbstractProp <|-- SuperFire_prop
AbstractProp <|-- Bomb_prop
AbstractProp <|-- Ice_prop


class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + getHeroAircraft():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class ShootingEnemy {
    - shootNum:int
    - power:int
    - direction:int
    + ShootingEnemy(int locationX, int locationY,
         int speedX, int speedY, int power)
    + forward():void
    + shoot():List<BaseBullet>
}

class QuickEnemy {
    + QuickEnemy(int locationX, int locationY,
         int speedX, int speedY, int power)
    + forward():void
    + shoot():List<BaseBullet>
    + dropProps():List<AbstractProp>
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY,
         int speedX, int speedY, int power)
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- ShootingEnemy
AbstractAircraft <|-- QuickEnemy
AbstractAircraft <|-- BossEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet



@enduml